--- a/BackendTesting/src/main/resources/application.properties
+++ b/BackendTesting/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 # Location of custom SQL scripts
-spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.data-locations=classpath:create.sql,classpath:alter.sql,classpath:insert.sql
 
 # Control execution order (schema.sql first, then data.sql)
 spring.sql.init.continue-on-error=false
